[feat/backend-user-ranks] feat: user ranks
