# backend/docs/swagger.yml
@@ -284,12 +284,19 @@ components:
             uses: { type: integer }
             created_at: { $ref: '#/components/schemas/DateTime' }
 
+    Rank:
+      type: object
+      properties:
+        id: { $ref: '#/components/schemas/UUID' }
+        name: { type: string }
+
     User:
       type: object
       properties:
         id: { $ref: '#/components/schemas/UUID' }
         telegram_id: { type: integer }
         name: { type: string }
+        rank: { $ref: '#/components/schemas/Rank' }
         avatar_url: { $ref: '#/components/schemas/URL' }
         level: { type: integer }
         created_at: { $ref: '#/components/schemas/DateTime' }
@@ -534,6 +541,9 @@ components:
           id: '550e8400-e29b-41d4-a716-446655440002'
           telegram_id: 10000323233
           name: 'UF2xx'
+          rank:
+            id: '550e8400-e29b-41d4-a716-446655440010'
+            name: 'Creator'
           avatar_url: 'https://example.com/avatar.jpg'
           level: 3
           created_at: '2024-01-02T15:30:00Z'
@@ -541,6 +551,9 @@ components:
             id: '550e8400-e29b-41d4-a716-446655440003'
             telegram_id: 10000543532
             name: 'sunsetsavorer'
+            rank:
+              id: '550e8400-e29b-41d4-a716-446655440010'
+              name: 'Creator'
             avatar_url: 'https://example.com/inviter_avatar.jpg'
             level: 5
             created_at: '2024-01-02T15:30:00Z'
